<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="8dp"
              tools:targetApi="LOLLIPOP">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center"
        android:lineSpacingExtra="2sp"
        android:text="@string/text_movie"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="start|center"
        android:lineSpacingExtra="2sp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center"
        android:lineSpacingExtra="2sp"
        android:text="@string/text_genre"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_detail_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="start|center"
        android:lineSpacingExtra="2sp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center"
        android:lineSpacingExtra="2sp"
        android:text="@string/text_duration"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_detail_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="start|center"
        android:lineSpacingExtra="2sp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:minHeight="128dp"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/btn_detail_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/btn_schedule_movie"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark" />
</LinearLayout>